# testingserver

./: build.sh  database.py  index.html  pyproject.toml  render.yaml
Testingserver/: .env  build.sh  package-lock.json  package.json  render.yaml  requirements.txt  server.js
Testingserver/instance/: mydatabase.db
Testingserver/public/: index.html  script.js
Testingserver/servers/: database.py
public/: script.js  styles.css
