[tool.poetry]
name = "flask-message-app"
version = "0.1.0"
description = "A simple Flask application with database functionality"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.3.3"
flask-sqlalchemy = "3.1.1"
flask-cors = "4.0.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"